# wiz3d

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.command  build.sh  todo.txt
_build/data/: angel.lua  fog.lua  helloworld.lua  hoverbike.lua  main.lua  rotatingcube.lua  specular.lua
ide/: common.h  dialog.h  editorwindow.h  ide.cc  style.h
lib/litelibs/: litegfx.h  litemath3d.h
src/: camera.c  camera.h  color.c  color.h  default_font.h  fog.c  fog.h  font.c  font.h  image.c  image.h  light.c  light.h  main.c  mesh.c  mesh.h  object.c  object.h  physics.c  platform_sdl2.c  screen.c  screen.h  script.c  types.h  util.c  util.h  wiz3d.c  wiz3d.h  wrap_camera.c  wrap_color.c  wrap_image.c  wrap_input.c  wrap_light.c  wrap_log.c  wrap_object.c  wrap_screen.c
stuff/: camera.i  fog.i  gen_defaultfont.cc  image.i  wiz3d.i
